<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_uid"
                android:text="spiderman"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_apikey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_apikey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1c915e3b5d42d05136185030892fbb846c278927"
                android:hint="@string/hint_apikey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_appid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_appid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2070"
                android:hint="@string/hint_appid" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pub0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_pub0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="campaign2"
                android:hint="@string/hint_pub0" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_getoffers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_offers"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</RelativeLayout>
